vnic_nsg_template.json
{
   "contentVersion":"1.0.0.0",
   "resources":[
      {
         "properties":{
            
         },
         "type":"Microsoft.Network/applicationSecurityGroups",
         "tags":{
            "colony-space-id":"2630148b-8c7e-4003-9d3f-a646c9616009",
            "colony-tags-version":"13",
            "colony-mgmt-resource-group":"colony-zjvmogqwzwvk9593",
            "colony-environment":"assafPC",
            "colony-sandbox-name":"Assaf - chronos-azure-qualiy-off",
            "colony-space-name":"Trial",
            "colony-blueprint-name":"chronos-azure-qualiy-off",
            "colony-owner-email":"assaf.c@quali.com",
            "colony-cloud-account-id":"010fb777-e6bd-4d8b-9a32-517b34817190",
            "colony-deployment-type":"sandbox",
            "colony-sandbox-id":"wwy7f30q0413z2",
            "colony-environment-id":"wwy7f30q0413z2"
         },
         "location":"[resourceGroup().location]",
         "name":"all_apps_asg",
         "apiVersion":"2017-10-01"
      },
      {
         "properties":{
            
         },
         "type":"Microsoft.Network/applicationSecurityGroups",
         "tags":{
            "colony-space-id":"2630148b-8c7e-4003-9d3f-a646c9616009",
            "colony-tags-version":"13",
            "colony-mgmt-resource-group":"colony-zjvmogqwzwvk9593",
            "colony-environment":"assafPC",
            "colony-sandbox-name":"Assaf - chronos-azure-qualiy-off",
            "colony-space-name":"Trial",
            "colony-blueprint-name":"chronos-azure-qualiy-off",
            "colony-owner-email":"assaf.c@quali.com",
            "colony-cloud-account-id":"010fb777-e6bd-4d8b-9a32-517b34817190",
            "colony-deployment-type":"sandbox",
            "colony-sandbox-id":"wwy7f30q0413z2",
            "colony-environment-id":"wwy7f30q0413z2"
         },
         "location":"[resourceGroup().location]",
         "name":"colonySidecar_asg",
         "apiVersion":"2017-10-01"
      },
      {
         "properties":{
            
         },
         "type":"Microsoft.Network/applicationSecurityGroups",
         "tags":{
            "colony-space-id":"2630148b-8c7e-4003-9d3f-a646c9616009",
            "colony-tags-version":"13",
            "colony-mgmt-resource-group":"colony-zjvmogqwzwvk9593",
            "colony-environment":"assafPC",
            "colony-sandbox-name":"Assaf - chronos-azure-qualiy-off",
            "colony-space-name":"Trial",
            "colony-blueprint-name":"chronos-azure-qualiy-off",
            "colony-owner-email":"assaf.c@quali.com",
            "colony-cloud-account-id":"010fb777-e6bd-4d8b-9a32-517b34817190",
            "colony-deployment-type":"sandbox",
            "colony-sandbox-id":"wwy7f30q0413z2",
            "colony-environment-id":"wwy7f30q0413z2"
         },
         "location":"[resourceGroup().location]",
         "name":"colonyDebugService_asg",
         "apiVersion":"2017-10-01"
      },
      {
         "properties":{
            
         },
         "type":"Microsoft.Network/applicationSecurityGroups",
         "tags":{
            "colony-space-id":"2630148b-8c7e-4003-9d3f-a646c9616009",
            "colony-tags-version":"13",
            "colony-mgmt-resource-group":"colony-zjvmogqwzwvk9593",
            "colony-environment":"assafPC",
            "colony-sandbox-name":"Assaf - chronos-azure-qualiy-off",
            "colony-space-name":"Trial",
            "colony-blueprint-name":"chronos-azure-qualiy-off",
            "colony-owner-email":"assaf.c@quali.com",
            "colony-cloud-account-id":"010fb777-e6bd-4d8b-9a32-517b34817190",
            "colony-deployment-type":"sandbox",
            "colony-sandbox-id":"wwy7f30q0413z2",
            "colony-environment-id":"wwy7f30q0413z2"
         },
         "location":"[resourceGroup().location]",
         "name":"chronos_asg",
         "apiVersion":"2017-10-01"
      },
      {
         "properties":{
            "securityRules":[
               {
                  "properties":{
                     "description":"denySandboxTraffic",
                     "protocol":"*",
                     "destinationPortRange":"*",
                     "destinationAddressPrefix":"*",
                     "sourceAddressPrefix":"*",
                     "sourcePortRange":"*",
                     "access":"Deny",
                     "direction":"Inbound",
                     "priority":4080
                  },
                  "name":"denyAllTraffic"
               },
               {
                  "properties":{
                     "description":"all_apps_to_sidecar",
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "access":"Allow",
                     "direction":"Inbound",
                     "priority":100,
                     "destinationPortRange":"*",
                     "destinationApplicationSecurityGroups":[
                        {
                           "id":"[resourceId('Microsoft.Network/applicationSecurityGroups/','colonySidecar_asg')]"
                        }
                     ],
                     "sourceApplicationSecurityGroups":[
                        {
                           "id":"[resourceId('Microsoft.Network/applicationSecurityGroups/','all_apps_asg')]"
                        }
                     ]
                  },
                  "name":"all_apps_to_sidecar"
               },
               {
                  "properties":{
                     "description":"qualiy_to_sidecar",
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "access":"Allow",
                     "direction":"Inbound",
                     "priority":110,
                     "destinationPortRange":"*",
                     "destinationApplicationSecurityGroups":[
                        {
                           "id":"[resourceId('Microsoft.Network/applicationSecurityGroups/','colonySidecar_asg')]"
                        }
                     ],
                     "sourceApplicationSecurityGroups":[
                        {
                           "id":"[resourceId('Microsoft.Network/applicationSecurityGroups/','colonyDebugService_asg')]"
                        }
                     ]
                  },
                  "name":"qualiy_to_sidecar"
               }
            ]
         },
         "type":"Microsoft.Network/networkSecurityGroups",
         "tags":{
            "colony-space-id":"2630148b-8c7e-4003-9d3f-a646c9616009",
            "colony-tags-version":"13",
            "colony-mgmt-resource-group":"colony-zjvmogqwzwvk9593",
            "colony-environment":"assafPC",
            "colony-sandbox-name":"Assaf - chronos-azure-qualiy-off",
            "colony-space-name":"Trial",
            "colony-blueprint-name":"chronos-azure-qualiy-off",
            "colony-owner-email":"assaf.c@quali.com",
            "colony-cloud-account-id":"010fb777-e6bd-4d8b-9a32-517b34817190",
            "colony-deployment-type":"sandbox",
            "colony-sandbox-id":"wwy7f30q0413z2",
            "colony-environment-id":"wwy7f30q0413z2"
         },
         "location":"[resourceGroup().location]",
         "name":"colonySidecar_security_group",
         "apiVersion":"2017-10-01",
         "dependsOn":[
            "[resourceId('Microsoft.Network/applicationSecurityGroups/','all_apps_asg')]",
            "[resourceId('Microsoft.Network/applicationSecurityGroups/','colonySidecar_asg')]",
            "[resourceId('Microsoft.Network/applicationSecurityGroups/','colonyDebugService_asg')]"
         ]
      },
      {
         "properties":{
            "securityRules":[
               {
                  "properties":{
                     "description":"denySandboxTraffic",
                     "protocol":"*",
                     "destinationPortRange":"*",
                     "destinationAddressPrefix":"*",
                     "sourceAddressPrefix":"*",
                     "sourcePortRange":"*",
                     "access":"Deny",
                     "direction":"Inbound",
                     "priority":4080
                  },
                  "name":"denyAllTraffic"
               },
               {
                  "properties":{
                     "description":"internet_to_qualiy_8080",
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "access":"Allow",
                     "direction":"Inbound",
                     "priority":100,
                     "destinationPortRanges":[
                        "8080"
                     ],
                     "destinationApplicationSecurityGroups":[
                        {
                           "id":"[resourceId('Microsoft.Network/applicationSecurityGroups/','colonyDebugService_asg')]"
                        }
                     ],
                     "sourceAddressPrefix":"Internet"
                  },
                  "name":"internet_to_qualiy_8080"
               }
            ]
         },
         "type":"Microsoft.Network/networkSecurityGroups",
         "tags":{
            "colony-space-id":"2630148b-8c7e-4003-9d3f-a646c9616009",
            "colony-tags-version":"13",
            "colony-mgmt-resource-group":"colony-zjvmogqwzwvk9593",
            "colony-environment":"assafPC",
            "colony-sandbox-name":"Assaf - chronos-azure-qualiy-off",
            "colony-space-name":"Trial",
            "colony-blueprint-name":"chronos-azure-qualiy-off",
            "colony-owner-email":"assaf.c@quali.com",
            "colony-cloud-account-id":"010fb777-e6bd-4d8b-9a32-517b34817190",
            "colony-deployment-type":"sandbox",
            "colony-sandbox-id":"wwy7f30q0413z2",
            "colony-environment-id":"wwy7f30q0413z2"
         },
         "location":"[resourceGroup().location]",
         "name":"colonyDebugService_security_group",
         "apiVersion":"2017-10-01",
         "dependsOn":[
            "[resourceId('Microsoft.Network/applicationSecurityGroups/','colonyDebugService_asg')]"
         ]
      },
      {
         "properties":{
            "securityRules":[
               {
                  "properties":{
                     "description":"denySandboxTraffic",
                     "protocol":"*",
                     "destinationPortRange":"*",
                     "destinationAddressPrefix":"*",
                     "sourceAddressPrefix":"*",
                     "sourcePortRange":"*",
                     "access":"Deny",
                     "direction":"Inbound",
                     "priority":4080
                  },
                  "name":"denyAllTraffic"
               },
               {
                  "properties":{
                     "description":"sidecar_to_all_apps",
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "access":"Allow",
                     "direction":"Inbound",
                     "priority":100,
                     "destinationPortRange":"*",
                     "destinationApplicationSecurityGroups":[
                        {
                           "id":"[resourceId('Microsoft.Network/applicationSecurityGroups/','all_apps_asg')]"
                        }
                     ],
                     "sourceApplicationSecurityGroups":[
                        {
                           "id":"[resourceId('Microsoft.Network/applicationSecurityGroups/','colonySidecar_asg')]"
                        }
                     ]
                  },
                  "name":"sidecar_to_all_apps"
               },
               {
                  "properties":{
                     "description":"qualiy_to_all_apps",
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "access":"Allow",
                     "direction":"Inbound",
                     "priority":110,
                     "destinationPortRanges":[
                        "22",
                        "3389"
                     ],
                     "destinationApplicationSecurityGroups":[
                        {
                           "id":"[resourceId('Microsoft.Network/applicationSecurityGroups/','all_apps_asg')]"
                        }
                     ],
                     "sourceApplicationSecurityGroups":[
                        {
                           "id":"[resourceId('Microsoft.Network/applicationSecurityGroups/','colonyDebugService_asg')]"
                        }
                     ]
                  },
                  "name":"qualiy_to_all_apps"
               },
               {
                  "properties":{
                     "description":"chronos_internal",
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "access":"Allow",
                     "direction":"Inbound",
                     "priority":120,
                     "destinationPortRanges":[
                        "3001",
                        "3000"
                     ],
                     "destinationApplicationSecurityGroups":[
                        {
                           "id":"[resourceId('Microsoft.Network/applicationSecurityGroups/','chronos_asg')]"
                        }
                     ],
                     "sourceApplicationSecurityGroups":[
                        {
                           "id":"[resourceId('Microsoft.Network/applicationSecurityGroups/','all_apps_asg')]"
                        }
                     ]
                  },
                  "name":"chronos_internal"
               },
               {
                  "properties":{
                     "description":"chronos_external",
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "access":"Allow",
                     "direction":"Inbound",
                     "priority":130,
                     "destinationPortRanges":[
                        "3000"
                     ],
                     "destinationApplicationSecurityGroups":[
                        {
                           "id":"[resourceId('Microsoft.Network/applicationSecurityGroups/','chronos_asg')]"
                        }
                     ],
                     "sourceAddressPrefix":"[reference(resourceId( 'Microsoft.Network/virtualNetworks/subnets', 'wwy7f30q0413z2_vnet', 'ag_subnet'), '2017-10-01').addressPrefix]"
                  },
                  "name":"chronos_external"
               }
            ]
         },
         "type":"Microsoft.Network/networkSecurityGroups",
         "tags":{
            "colony-space-id":"2630148b-8c7e-4003-9d3f-a646c9616009",
            "colony-tags-version":"13",
            "colony-mgmt-resource-group":"colony-zjvmogqwzwvk9593",
            "colony-environment":"assafPC",
            "colony-sandbox-name":"Assaf - chronos-azure-qualiy-off",
            "colony-space-name":"Trial",
            "colony-blueprint-name":"chronos-azure-qualiy-off",
            "colony-owner-email":"assaf.c@quali.com",
            "colony-cloud-account-id":"010fb777-e6bd-4d8b-9a32-517b34817190",
            "colony-deployment-type":"sandbox",
            "colony-sandbox-id":"wwy7f30q0413z2",
            "colony-environment-id":"wwy7f30q0413z2"
         },
         "location":"[resourceGroup().location]",
         "name":"app_shared_security_group",
         "apiVersion":"2017-10-01",
         "dependsOn":[
            "[resourceId('Microsoft.Network/applicationSecurityGroups/','all_apps_asg')]",
            "[resourceId('Microsoft.Network/applicationSecurityGroups/','chronos_asg')]",
            "[resourceId('Microsoft.Network/applicationSecurityGroups/','colonySidecar_asg')]",
            "[resourceId('Microsoft.Network/applicationSecurityGroups/','colonyDebugService_asg')]"
         ]
      },
      {
         "properties":{
            "ipConfigurations":[
               {
                  "properties":{
                     "privateIPAllocationMethod":"Dynamic",
                     "subnet":{
                        "id":"[resourceId( 'Microsoft.Network/virtualNetworks/subnets', 'wwy7f30q0413z2_vnet', 'app_subnet')]"
                     },
                     "applicationSecurityGroups":[
                        {
                           "id":"[resourceId('Microsoft.Network/applicationSecurityGroups/','chronos_asg')]"
                        },
                        {
                           "id":"[resourceId('Microsoft.Network/applicationSecurityGroups/','all_apps_asg')]"
                        }
                     ]
                  },
                  "name":"chronos_nicIPConf"
               }
            ],
            "networkSecurityGroup":{
               "id":"[resourceId('Microsoft.Network/networkSecurityGroups/','app_shared_security_group')]"
            }
         },
         "type":"Microsoft.Network/networkInterfaces",
         "dependsOn":[
            "[resourceId('Microsoft.Network/networkSecurityGroups/','app_shared_security_group')]",
            "[resourceId('Microsoft.Network/applicationSecurityGroups/','chronos_asg')]",
            "[resourceId('Microsoft.Network/applicationSecurityGroups/','all_apps_asg')]"
         ],
         "tags":{
            "colony-space-id":"2630148b-8c7e-4003-9d3f-a646c9616009",
            "colony-tags-version":"13",
            "colony-mgmt-resource-group":"colony-zjvmogqwzwvk9593",
            "colony-environment":"assafPC",
            "colony-sandbox-name":"Assaf - chronos-azure-qualiy-off",
            "colony-space-name":"Trial",
            "colony-blueprint-name":"chronos-azure-qualiy-off",
            "colony-owner-email":"assaf.c@quali.com",
            "colony-cloud-account-id":"010fb777-e6bd-4d8b-9a32-517b34817190",
            "colony-deployment-type":"sandbox",
            "colony-sandbox-id":"wwy7f30q0413z2",
            "colony-environment-id":"wwy7f30q0413z2"
         },
         "location":"[resourceGroup().location]",
         "name":"chronos_nic",
         "apiVersion":"2017-10-01"
      },
      {
         "properties":{
            "ipConfigurations":[
               {
                  "properties":{
                     "privateIPAllocationMethod":"Dynamic",
                     "subnet":{
                        "id":"[resourceId( 'Microsoft.Network/virtualNetworks/subnets', 'wwy7f30q0413z2_vnet', 'mng_subnet')]"
                     },
                     "applicationSecurityGroups":[
                        {
                           "id":"[resourceId('Microsoft.Network/applicationSecurityGroups/','colonySidecar_asg')]"
                        }
                     ]
                  },
                  "name":"colonySidecar_nicIPConf"
               }
            ],
            "networkSecurityGroup":{
               "id":"[resourceId('Microsoft.Network/networkSecurityGroups/','colonySidecar_security_group')]"
            }
         },
         "type":"Microsoft.Network/networkInterfaces",
         "dependsOn":[
            "[resourceId('Microsoft.Network/networkSecurityGroups/','colonySidecar_security_group')]",
            "[resourceId('Microsoft.Network/applicationSecurityGroups/','colonySidecar_asg')]"
         ],
         "tags":{
            "colony-space-id":"2630148b-8c7e-4003-9d3f-a646c9616009",
            "colony-tags-version":"13",
            "colony-mgmt-resource-group":"colony-zjvmogqwzwvk9593",
            "colony-environment":"assafPC",
            "colony-sandbox-name":"Assaf - chronos-azure-qualiy-off",
            "colony-space-name":"Trial",
            "colony-blueprint-name":"chronos-azure-qualiy-off",
            "colony-owner-email":"assaf.c@quali.com",
            "colony-cloud-account-id":"010fb777-e6bd-4d8b-9a32-517b34817190",
            "colony-deployment-type":"sandbox",
            "colony-sandbox-id":"wwy7f30q0413z2",
            "colony-environment-id":"wwy7f30q0413z2"
         },
         "location":"[resourceGroup().location]",
         "name":"colonySidecar_nic",
         "apiVersion":"2017-10-01"
      },
      {
         "properties":{
            "ipConfigurations":[
               {
                  "properties":{
                     "privateIPAllocationMethod":"Dynamic",
                     "subnet":{
                        "id":"[resourceId( 'Microsoft.Network/virtualNetworks/subnets', 'wwy7f30q0413z2_vnet', 'mng_subnet')]"
                     },
                     "applicationSecurityGroups":[
                        {
                           "id":"[resourceId('Microsoft.Network/applicationSecurityGroups/','colonyDebugService_asg')]"
                        }
                     ],
                     "publicIPAddress":{
                        "id":"[resourceId('Microsoft.Network/publicIPAddresses/','colonyDebugService_pubIP')]"
                     }
                  },
                  "name":"colonyDebugService_nicIPConf"
               }
            ],
            "networkSecurityGroup":{
               "id":"[resourceId('Microsoft.Network/networkSecurityGroups/','colonyDebugService_security_group')]"
            }
         },
         "type":"Microsoft.Network/networkInterfaces",
         "dependsOn":[
            "[resourceId('Microsoft.Network/applicationSecurityGroups/','colonyDebugService_asg')]",
            "[resourceId('Microsoft.Network/publicIPAddresses/','colonyDebugService_pubIP')]",
            "[resourceId('Microsoft.Network/networkSecurityGroups/','colonyDebugService_security_group')]"
         ],
         "tags":{
            "colony-space-id":"2630148b-8c7e-4003-9d3f-a646c9616009",
            "colony-tags-version":"13",
            "colony-mgmt-resource-group":"colony-zjvmogqwzwvk9593",
            "colony-environment":"assafPC",
            "colony-sandbox-name":"Assaf - chronos-azure-qualiy-off",
            "colony-space-name":"Trial",
            "colony-blueprint-name":"chronos-azure-qualiy-off",
            "colony-owner-email":"assaf.c@quali.com",
            "colony-cloud-account-id":"010fb777-e6bd-4d8b-9a32-517b34817190",
            "colony-deployment-type":"sandbox",
            "colony-sandbox-id":"wwy7f30q0413z2",
            "colony-environment-id":"wwy7f30q0413z2"
         },
         "location":"[resourceGroup().location]",
         "name":"colonyDebugService_nic",
         "apiVersion":"2017-10-01"
      },
      {
         "properties":{
            "publicIPAllocationMethod":"dynamic"
         },
         "type":"Microsoft.Network/publicIPAddresses",
         "tags":{
            "colony-space-id":"2630148b-8c7e-4003-9d3f-a646c9616009",
            "colony-tags-version":"13",
            "colony-mgmt-resource-group":"colony-zjvmogqwzwvk9593",
            "colony-environment":"assafPC",
            "colony-sandbox-name":"Assaf - chronos-azure-qualiy-off",
            "colony-space-name":"Trial",
            "colony-blueprint-name":"chronos-azure-qualiy-off",
            "colony-owner-email":"assaf.c@quali.com",
            "colony-cloud-account-id":"010fb777-e6bd-4d8b-9a32-517b34817190",
            "colony-deployment-type":"sandbox",
            "colony-sandbox-id":"wwy7f30q0413z2",
            "colony-environment-id":"wwy7f30q0413z2"
         },
         "location":"[resourceGroup().location]",
         "name":"colonyDebugService_pubIP",
         "apiVersion":"2017-10-01"
      }
   ],
   "$schema":"http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json"
}
